# ChessProj

./: CMakeLists.txt
include/ChessProj/: Board.h  Piece.h  Tile.h
src/: main.cpp
src/Entities/: Board.cpp  Piece.cpp  Tile.cpp
src/Factories/: PieceFactory.h
